Week 2 미션 1 refactoring